generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           String   @id @default(uuid())
  username     String   @unique
  email        String   @unique
  passwordHash String   @map("password_hash")
  role         String   @default("USER") // USER, ADMIN
  exp          Int      @default(0) // 修仙经验值
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")
  bodyData     UserBodyData[]
  plans        FitnessPlan[]
  weightRecords WeightRecord[]
  posts        Post[]
  comments     Comment[]
  postLikes    PostLike[]
  postFavorites PostFavorite[]
  trainingLogs TrainingLog[]
  dailyNutritions DailyNutrition[]
  achievements UserAchievement[]
  pet          Pet?
  expLogs      ExpLog[]

  @@map("users")
}

model UserBodyData {
  id               String   @id @default(uuid())
  userId           String   @map("user_id")
  gender           String   // MALE, FEMALE
  height           Float
  weight           Float
  age              Int
  goal             String   // MUSCLE_GAIN, FAT_LOSS
  trainingTime     String   @map("training_time") // EARLY_MORNING, LATE_MORNING, BEFORE_LUNCH, AFTER_LUNCH, BEFORE_DINNER, AFTER_DINNER, NIGHT
  trainingLevel    String   @map("training_level") // BEGINNER, INTERMEDIATE, ADVANCED
  hasCardio        Boolean  @default(false) @map("has_cardio")
  cardioHeartRate  Float?   @map("cardio_heart_rate")
  restingHeartRate Float?   @map("resting_heart_rate")
  cardioDuration   Float?   @map("cardio_duration")
  createdAt        DateTime @default(now()) @map("created_at")
  user             User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  plans            FitnessPlan[]

  @@map("user_body_data")
}

model FitnessPlan {
  id                     String   @id @default(uuid())
  userId                 String   @map("user_id")
  bodyDataId             String   @map("body_data_id")
  bmi                    Float
  bmr                    Float
  tdee                   Float    @map("tdee")
  trainingCalorie        Float    @map("training_calorie")
  cardioCalorie          Float    @map("cardio_calorie")
  trainingDayMaintenance Float    @map("training_day_maintenance")
  restDayMaintenance     Float    @map("rest_day_maintenance")
  trainingDayTarget      Float    @map("training_day_target")
  restDayTarget          Float    @map("rest_day_target")
  proteinG               Float    @map("protein_g")
  fatG                   Float    @map("fat_g")
  trainingDayCarbG       Float    @map("training_day_carb_g")
  restDayCarbG           Float    @map("rest_day_carb_g")
  trainingDayCarbQuota   Float    @default(2.6) @map("training_day_carb_quota") // 力训日碳水配额 g/kg
  restDayCarbQuota       Float    @default(2.0) @map("rest_day_carb_quota")     // 休息日碳水配额 g/kg
  proteinQuota           Float    @default(1.4) @map("protein_quota")           // 蛋白质配额 g/kg
  planType               String   @map("plan_type")
  trainingDayMeals       String   @map("training_day_meals") // JSON string
  restDayMeals           String   @map("rest_day_meals") // JSON string
  exerciseAdvice         String   @map("exercise_advice") // JSON string
  precautions            String   // JSON string
  createdAt              DateTime @default(now()) @map("created_at")
  user                   User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  bodyData               UserBodyData @relation(fields: [bodyDataId], references: [id])

  @@map("fitness_plans")
}

model WeightRecord {
  id         String   @id @default(uuid())
  userId     String   @map("user_id")
  weight     Float
  recordedAt String   @map("recorded_at") // ISO date string YYYY-MM-DD
  createdAt  DateTime @default(now()) @map("created_at")
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, recordedAt])
  @@map("weight_records")
}

model Food {
  id            String  @id @default(uuid())
  name          String
  category      String  // CARB, PROTEIN, FAT
  nutritionRate Float   @map("nutrition_rate")
  giIndex       Float?  @map("gi_index")
  description   String  @default("")

  @@map("foods")
}

model QAArticle {
  id        String @id @default(uuid())
  type      String // FAT_LOSS, MUSCLE_GAIN
  question  String
  answer    String
  sortOrder Int    @map("sort_order")

  @@map("qa_articles")
}

model TrainingPlan {
  id         String @id @default(uuid())
  type       String // GYM_3SPLIT, GYM_4SHOULDER, GYM_4ARM, HOME_3SPLIT
  dayNumber  Int    @map("day_number")
  groupName  String @map("group_name")
  exercises  String // JSON string (enhanced format with groups & joint activities)
  tips       String @default("{}") @map("tips") // JSON string (training tips for this plan type)

  @@map("training_plans")
}

model Post {
  id           String   @id @default(uuid())
  authorId     String   @map("author_id")
  title        String
  content      String
  category     String   // CHECK_IN, TRAINING, DIET, QUESTION, EXPERIENCE
  likeCount    Int      @default(0) @map("like_count")
  commentCount Int      @default(0) @map("comment_count")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")
  author       User     @relation(fields: [authorId], references: [id], onDelete: Cascade)
  comments     Comment[]
  likes        PostLike[]
  favorites    PostFavorite[]

  @@map("posts")
}

model Comment {
  id        String   @id @default(uuid())
  postId    String   @map("post_id")
  authorId  String   @map("author_id")
  content   String
  createdAt DateTime @default(now()) @map("created_at")
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  author    User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@map("comments")
}

model PostLike {
  id        String   @id @default(uuid())
  postId    String   @map("post_id")
  userId    String   @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@map("post_likes")
}

model PostFavorite {
  id        String   @id @default(uuid())
  postId    String   @map("post_id")
  userId    String   @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@map("post_favorites")
}

/// 训练日志模型
model TrainingLog {
  id           String   @id @default(uuid())
  userId       String   @map("user_id")
  date         String   @map("date") // YYYY-MM-DD
  exerciseName String   @map("exercise_name")
  sets         Int      // 组数
  reps         Int      // 每组次数
  weight       Float    // 重量(kg)
  notes        String?  // 备注
  createdAt    DateTime @default(now()) @map("created_at")
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("training_logs")
}

/// 每日营养素记录模型
model DailyNutrition {
  id         String   @id @default(uuid())
  userId     String   @map("user_id")
  date       String   @map("date") // YYYY-MM-DD
  carbG      Float    @map("carb_g")
  proteinG   Float    @map("protein_g")
  fatG       Float    @map("fat_g")
  calories   Float
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, date])
  @@map("daily_nutrition")
}

/// 成就定义模型
model Achievement {
  id          String   @id @default(uuid())
  key         String   @unique // e.g., FIRST_PLAN, SEVEN_DAY_STREAK, etc.
  name        String
  description String
  icon        String   // emoji or icon name
  category    String   // PLAN, TRAINING, COMMUNITY, etc.
  threshold   Int      // 解锁阈值
  userAchievements UserAchievement[]

  @@map("achievements")
}

/// 用户成就解锁记录
model UserAchievement {
  id            String   @id @default(uuid())
  userId        String   @map("user_id")
  achievementId String   @map("achievement_id")
  unlockedAt    DateTime @default(now()) @map("unlocked_at")
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  achievement   Achievement @relation(fields: [achievementId], references: [id])

  @@unique([userId, achievementId])
  @@map("user_achievements")
}

/// 经验变动日志
model ExpLog {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  amount    Int      // 获得经验值
  source    String   // PLAN, TRAINING_LOG, NUTRITION, POST, COMMENT, STREAK_BONUS
  note      String   @default("")
  createdAt DateTime @default(now()) @map("created_at")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("exp_logs")
}

/// 灵宠
model Pet {
  id          String   @id @default(uuid())
  userId      String   @unique @map("user_id")
  name        String
  type        String   // cat, dog, dragon, fox
  adoptedAt   DateTime @default(now()) @map("adopted_at")
  stage       Int      @default(1) // 1=练气幼崽, 2=筑基少年, 3=金丹成年, 4=元婴成熟, 5=化神终极
  hunger      Float    @default(100) // 0-100 (100=饱腹)
  happiness   Float    @default(100) // 0-100
  bodyFat     Float    @default(15) // 体脂率
  weight      Float    @default(5) // 体重(kg)
  lastFedAt   DateTime? @map("last_fed_at")
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  feedingLogs PetFeedingLog[]

  @@map("pets")
}

/// 灵宠喂食日志
model PetFeedingLog {
  id         String   @id @default(uuid())
  petId      String   @map("pet_id")
  date       String   // YYYY-MM-DD
  foodType   String   // LOW_CARB, BALANCED, HIGH_CARB, OVERFED
  carbG      Float    @map("carb_g")
  proteinG   Float    @map("protein_g")
  fatG       Float    @map("fat_g")
  createdAt  DateTime @default(now()) @map("created_at")
  pet        Pet      @relation(fields: [petId], references: [id], onDelete: Cascade)

  @@map("pet_feeding_logs")
}
