classDiagram
    class User {
        +String id
        +String username
        +String email
        +String passwordHash
        +String role
        +DateTime createdAt
        +DateTime updatedAt
    }

    class TrainingLog {
        +String id
        +String userId
        +String planType
        +Int dayNumber
        +String groupName
        +DateTime date
        +String notes
        +DateTime createdAt
        +DateTime updatedAt
    }

    class TrainingLogSet {
        +String id
        +String logId
        +String exerciseName
        +Int setNumber
        +Int reps
        +Float weight
        +DateTime createdAt
    }

    class DailyNutrition {
        +String id
        +String userId
        +String date
        +Float carbG
        +Float proteinG
        +Float fatG
        +Float calorieTotal
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Achievement {
        +String id
        +String code
        +String name
        +String description
        +String icon
        +String category
        +String conditionType
        +String conditionValue
        +Int xpReward
    }

    class UserAchievement {
        +String id
        +String userId
        +String achievementId
        +DateTime unlockedAt
    }

    User "1" --> "*" TrainingLog : trainingLogs
    User "1" --> "*" DailyNutrition : dailyNutritions
    User "1" --> "*" UserAchievement : userAchievements
    TrainingLog "1" --> "*" TrainingLogSet : sets
    Achievement "1" --> "*" UserAchievement : userAchievements
